fixed the button alignment

--- a/main.scss
+++ b/main.scss
@@ -90,6 +90,16 @@
 			   text-align: left;
 			   }
 			 }
+            .o-feature-action-button,
+            .o-feature-action-url-colon,
+            .o-feature-action-url{
+               float: right;
+            }
+
+            .o-feature-action-url {
+              text-align: right;
+            }
+
 		  }
 
 
@@ -178,10 +188,10 @@
         display: block !important;
         float: left;
         display: none;
-        top: 0px;
+        top: 0;
         position: relative;
-        left: 5px;
-        padding: 10px;
+        left: 0;
+        padding: 10px 0;
         width: 100%;
         text-align: left;
       }
